changes made to school

--- a/index.html
+++ b/index.html
@@ -157,11 +157,11 @@
   <div class="row">
     <div class="col-sm division">
     <p class="para"><i class="fas fa-graduation-cap fa-4x"></i>  <h3> School Address</h3>
-    Kulpi, Baruipur Road, Kolkata - 7000104 ,WB</p>
+    Baruipur, Kulpi Road (Near Krishnamohan station) Kolkata - 7000144 </p>
     </div>
     <div class="col-sm division">
       <p class="para"><i class="far fa-bell fa-4x"></i><h3>School Timings</h3>
-     08:00 - 14:00 hrs- Monday to Friday.<br>Saturday & Sunday- Closed.</p>
+     08:30 - 14:00 hrs- Monday to Friday.<br>Saturday & Sunday- Closed.</p>
     </div>
     <div class="col-sm division">
     <p class="para"> <i class="fas fa-globe fa-4x"></i> <h3>Online Fees Payment</h3>
