changes done on 10/5/20

--- a/classes.html
+++ b/classes.html
@@ -23,120 +23,107 @@
 <body>
   <!-- navbar -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #f6f578;">
-    <a class="navbar-brand" href="bootstrap.html">
-      <img src="images/logo.png" width="50" height="50" alt="school logo">
-      <span class="navbar-brand mb-0 h1 ">Karuna Play House</span>
-    </a>
+  <a class="navbar-brand" href="bootstrap.html">
+    <img src="images/logo.png" width="50" height="50" alt="school logo">
+    <span class="navbar-brand mb-0 h1 ">Karuna Play House</span>
+  </a>
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="file:///D:/web_development_project/bootstrap/index.html#">Home<span class="sr-only">(current)</span> </a>
-        </li>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item active " style="background-color: #f6f578;">
+        <a class="nav-link" href="file:///D:/web_development_project/bootstrap/index.html#">Home<span class="sr-only">(current)</span> </a>
+      </li>
 
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Nursery
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#subjects">Subjects</a>
-            <a class="dropdown-item" href="#activity">Activity</a>
-            <a class="dropdown-item" href="#progress">Progress</a>
-          </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            LKG
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#subjects">Subjects</a>
-            <a class="dropdown-item" href="#activity">Activity</a>
-            <a class="dropdown-item" href="#progress">Progress</a>
-          </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            UKG
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#subjects">Subjects</a>
-            <a class="dropdown-item" href="#activity">Activity</a>
-            <a class="dropdown-item" href="#progress">Progress</a>
-          </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Class 2
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#subjects">Subjects</a>
-            <a class="dropdown-item" href="#activity">Activity</a>
-            <a class="dropdown-item" href="#progress">Progress</a>
-          </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Class 3
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#subjects">Subjects</a>
-            <a class="dropdown-item" href="#activity">Activity</a>
-            <a class="dropdown-item" href="#progress">Progress</a>
-          </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Class 4
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#subjects">Subjects</a>
-            <a class="dropdown-item" href="#activity">Activity</a>
-            <a class="dropdown-item" href="#progress">Progress</a>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </nav>
-
-  <!-- activity -->
-  <div id="activity" class="row divider" style="margin-top:80px;">
-
-    <div class="col-md-6">
-      <h1>Activities</h1>
-      <ul style="padding-bottom: 50px;">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-    </div>
-    <div class="col-md-6">
-      <ul style="padding-bottom: 50px;">
-
-      </ul>
-    </div>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Academics
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="classes.html">Classes</a>
+          <a class="dropdown-item" href="fees.html">Fee Structure</a>
+          <a class="dropdown-item" href="admission.html">Admission</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="rules.html">School Rules</a>
+        </div>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Achievements
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Academics</a></a>
+          <a class="dropdown-item" href="vid1.html">Co-Curricular</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Events
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Visits and Inspects</a>
+          <a class="dropdown-item" href="#">Sports Day</a>
+          <a class="dropdown-item" href="#">Independance Day</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Workshops</a>
+        </div>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          About Us
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">History</a>
+          <a class="dropdown-item" href="#">Mission & Vision</a>
+          <a class="dropdown-item" href="#">Faculty</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">About the Institute</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#footer">Contact Us</a>
+      </li>
+    </ul>
   </div>
+</nav>
 
-  <!-- progress -->
-  <div id="progress" class="row">
-    <div class="col-md-6 div1">
-      <h1 style="padding-left: 20px;">Progress</h1><br>
-      <p class="para1"></p>
-    </div>
-    <div class="col-md-6 div1">
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-    </div>
+  <!-- classes -->
+  <div id="activity" class="row divider" style="margin-top:80px;">
+    <h1>Classes:</h1>
+    <div class="col-md-6">
+      </div>
+    <div class="col-md-6">
+      <button type="button" class="collapsible b">Nursery</button>
+  <div class="content">
+    <p>Booklist, Activities and progress would be shown here.</p>
+  </div>
+  <button type="button" class="collapsible b">LKG</button>
+<div class="content">
+<p>Booklist, Activities and progress would be shown here.</p>
+</div>
+<button type="button" class="collapsible b">UKG</button>
+<div class="content">
+<p>Booklist, Activities and progress would be shown here.</p>
+</div>
+<button type="button" class="collapsible b">Class 1</button>
+<div class="content">
+<p>Booklist, Activities and progress would be shown here.</p>
+</div>
+<button type="button" class="collapsible b">Class 2</button>
+<div class="content">
+<p>Booklist, Activities and progress would be shown here.</p>
+</div>
+<button type="button" class="collapsible b">Class 3</button>
+<div class="content">
+<p>Booklist, Activities and progress would be shown here.</p>
+</div>
+<button type="button" class="collapsible b">Class 4</button>
+<div class="content">
+<p>Booklist, Activities and progress would be shown here.</p>
+</div>
+  </div>
   </div>
 
   <!-- footer section -->
@@ -148,7 +135,22 @@
     <a class="ar" href="fees.html"><i class="f fas fa-envelope"></i></a>
     <p id="p">© Copyright 2020 Karuna Play House</p>
   </footer>
+  <script>
+  var coll = document.getElementsByClassName("collapsible");
+  var i;
 
+  for (i = 0; i < coll.length; i++) {
+    coll[i].addEventListener("click", function() {
+      this.classList.toggle("active");
+      var content = this.nextElementSibling;
+      if (content.style.display === "block") {
+        content.style.display = "none";
+      } else {
+        content.style.display = "block";
+      }
+    });
+  }
+  </script>
 </body>
 
 </html>
