--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
+        <li class="nav-item active"  style="background-color: #f6f578;">
           <a class="nav-link" href="file:///D:/web_development_project/bootstrap/index.html#">Home<span class="sr-only">(current)</span> </a>
         </li>
 
@@ -48,10 +48,10 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="classes.html">Classes</a>
-            <a class="dropdown-item" href="#">Fee Structure</a>
-            <a class="dropdown-item" href="#">Admission</a>
+            <a class="dropdown-item" href="fees.html">Fee Structure</a>
+            <a class="dropdown-item" href="admission.html">Admission</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">School Rules</a>
+            <a class="dropdown-item" href="rules.html">School Rules</a>
           </div>
         </li>
         <li class="nav-item dropdown">
@@ -60,7 +60,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="#">Academics</a></a>
-            <a class="dropdown-item" href="#">Co-Curricular</a>
+            <a class="dropdown-item" href="vid1.html">Co-Curricular</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -132,7 +132,7 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-<!-- first-section -->
+<!-- features-section -->
 <div class=" row divider">
   <div class="col-md-6">
     <h1>Salient Features</h1>
@@ -161,11 +161,11 @@
     </div>
     <div class="col-sm division">
       <p class="para"><i class="far fa-bell fa-4x"></i><h3>School Timings</h3>
-     08:30 - 14:00 hrs- Monday to Friday.<br>Saturday & Sunday- Closed.</p>
+     08:00 - 14:00 hrs- Monday to Friday.<br>Saturday & Sunday- Closed.</p>
     </div>
     <div class="col-sm division">
     <p class="para"> <i class="fas fa-globe fa-4x"></i> <h3>Online Fees Payment</h3>
-      <a href="contact_us.html"><button type="button" class="btn btn-outline-dark">Click Here</button></a></p>
+      <a href="fees.html"><button type="button" class="btn btn-outline-dark">Click Here</button></a></p>
     </div>
   </div>
 </div>
@@ -195,23 +195,23 @@
   <div class="skills">
     <h1 style="padding: 40px 50px;   text-align: center;">Skills To Be Developed..</h1>
     <div class="skill-1">
-     <img class="skill1-img" src="images/teamwork.png" alt="cooperation-img">
+     <a href="vid1.html"><img class="skill1-img" src="images/teamwork.png" alt="cooperation-img"></a>
      <p class="pa">Co-operation & Decision Making</p>
     </div>
     <div class="skill-2">
-      <img class="skill2-img" src="images/confidence.png" alt="confidence-img">
+       <a href="vid1.html"><img class="skill2-img" src="images/confidence.png" alt="confidence-img"></a>
       <p class="pa">Confidence & Memory skills.</p>
     </div>
     <div class="skill-1">
-      <img class="skill1-img" src="images/credibility.png" alt="Groupskill-img">
+       <a href="vid1.html"><img class="skill1-img" src="images/credibility.png" alt="Groupskill-img"></a>
       <p class="pa">Group Skills & Follow up skills</p>
     </div>
     <div class="skill-2">
-      <img class="skill2-img" src="images/observation.png" alt="memory-img">
+       <a href="vid1.html"><img class="skill2-img" src="images/observation.png" alt="memory-img"></a>
       <p class="pa">Memory & problem solving ability</p>
     </div>
     <div class="skill-1">
-      <img class="skill1-img" src="images/candidate.png" alt="observation-img">
+       <a href="vid1.html"><img class="skill1-img" src="images/candidate.png" alt="observation-img"></a>
       <p class="pa">Observation & Attention span.</p>
     </div>
   </div>
@@ -259,10 +259,10 @@
 <!-- footer section -->
 <footer id="footer">
   <p>Contact Us</p>
-<a class="ar" href="fees.html"> <i class="f fab fa-facebook-f"></i></a>
-<a class="ar" href="fees.html"> <i class="f fab fa-twitter"></i></a>
-<a class="ar" href="fees.html"> <i class="f fab fa-instagram"></i></a>
-<a class="ar" href="fees.html"><i class="f fas fa-envelope"></i></a>
+<a class="ar" href="contacts.html"> <i class="f fab fa-facebook-f"></i></a>
+<a class="ar" href="contacts.html"> <i class="f fab fa-twitter"></i></a>
+<a class="ar" href="contacts.html"> <i class="f fab fa-instagram"></i></a>
+<a class="ar" href="contacts.html"><i class="f fas fa-envelope"></i></a>
  <p id="p">© Copyright 2020 Karuna Play House</p>
 
 </footer>
