changes made on 14/5/20

--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
   <div class="row">
     <div class="col-sm division">
     <p class="para"><i class="fas fa-graduation-cap fa-4x"></i>  <h3> School Address</h3>
-    Baruipur, Kulpi Road (Near Krishnamohan station) Kolkata - 7000144 </p>
+    Baruipur, Kulpi Road (Near Krishnamohan station) Kolkata - 7000144<br>
+    <a href="https://goo.gl/maps/T3CCuD2NNAdqGBck6"><button type="button" class="btn btn-outline-dark">Get Directions</button></a></p>
     </div>
     <div class="col-sm division">
       <p class="para"><i class="far fa-bell fa-4x"></i><h3>School Timings</h3>
